metrics server additions

--- a/gitops/applications/base/monitoring/kustomization.yaml
+++ b/gitops/applications/base/monitoring/kustomization.yaml
@@ -29,4 +29,9 @@ helmCharts:
     repo: oci://registry-1.docker.io/bitnamicharts
     valuesFile: values-loki.yaml
     namespace: ${ARGOCD_ENV_monitoring_namespace}
-  
+  - name: metrics-server
+    releaseName: metrics-server
+    repo: https://kubernetes-sigs.github.io/metrics-server
+    valuesFile: values-metrics-server.yaml
+    namespace: ${ARGOCD_ENV_monitoring_namespace}
+    version: ${ARGOCD_ENV_metrics_server_helm_version}
