--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -88,6 +88,11 @@ spec:
         - name: "cluster_label_value"
           value: "${ARGOCD_ENV_monitoring_prometheus_cluster_label_value}"
 
+        - name: "metrics_server_helm_version"
+          value: "${ARGOCD_ENV_utils_monitoring_metrics_server_helm_version}"
+        - name: "metrics_server_replicas"
+          value: "${ARGOCD_ENV_utils_monitoring_metrics_server_replicas}"
+
         - name: "mimir_bucket_name"
           value: "${ARGOCD_ENV_monitoring_pre_mimir_bucket_name}"
         - name: "mimir_max_global_series_per_user"
@@ -102,7 +107,6 @@ spec:
           value: "${ARGOCD_ENV_monitoring_mimir_max_label_names_per_series}"
         - name: "mimir_compactor_deletion_delay"
           value: "${ARGOCD_ENV_monitoring_mimir_compactor_deletion_delay}"
-
 
         - name: "ctrl_cntr_loki_bucket_name"
           value: "${ARGOCD_ENV_monitoring_pre_ctrl_cntr_loki_bucket_name}"
