--- a/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
+++ b/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
@@ -105,7 +105,7 @@ spec:
                   # message field contains title
                   message: {{ `"[{{ .Status  }}] {{ .GroupLabels.cluster }} | {{ .GroupLabels.alertname }}"` }}
                   # description field contains the body
-                  description: {{ `"|
+                  description: {{ `"
                     {{ range .Alerts }}
                     summary: {{ .Annotations.summary }}
                     description: {{ .Annotations.description }}
