--- a/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
+++ b/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
@@ -107,8 +107,9 @@ spec:
                   # description field contains the body
                   description: {{ `"
                     {{ range .Alerts }}
-                    summary: {{ .Annotations.summary }}
+                    summary: {{ .Annotations.summary }} \n
                     description: {{ .Annotations.description }}
+
                     {{ end }}
                     "` }}
 ---
