write summary and description in upper case

--- a/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
+++ b/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
@@ -107,8 +107,8 @@ spec:
                   # description field contains the body
                   description: {{ `"
                     {{ range .Alerts }}
-                    summary: {{ .Annotations.summary }} \n
-                    description: {{ .Annotations.description }}
+                    SUMMARY: {{ .Annotations.summary }} \n
+                    DESCRIPTION: {{ .Annotations.description }}
 
                     {{ end }}
                     "` }}
