--- a/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
@@ -515,6 +515,7 @@ ttk-mongodb:
       storage_class_name: longhorn
       service_port: 27017
       affinity_definition: {}
+    additional_privileges: []      
 
 keycloak-db:
   local_operator_config:
