--- a/gitops/applications/base/monitoring-post-config/kustomization.yaml
+++ b/gitops/applications/base/monitoring-post-config/kustomization.yaml
@@ -18,4 +18,12 @@ resources:
   - dashboards-prometheus.yaml
   - dashboards-rook-ceph.yaml
   - istio-crs.yaml
+  - mimir-alertmanager.yaml
+  - mimirtool-cronjob.yaml
   - rook-ceph-objectstore-exporter.yaml
+
+configMapGenerator:
+  - name: mimir-ruler-data
+    files:
+      - alerts-infra.yaml
+      - recording-rules-mimir.yaml
