--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -31,6 +31,7 @@ prometheus:
 
 kubelet:
   serviceMonitor:
+    # interval: 60s
     relabelings:
       # adds kubernetes_io_hostname label being used by k8s monitoring dashboard
       - sourceLabels: [node]
@@ -43,6 +44,7 @@ kubelet:
 
 node-exporter:
   serviceMonitor:
+    # interval: 60s
     relabelings:
       - sourceLabels: [__meta_kubernetes_pod_node_name]
         targetLabel: nodename
