--- a/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/templates/mr.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/templates/mr.yaml
@@ -62,6 +62,7 @@ metadata:
     organization: Infitx
     author: devops   
 spec:
+  id: {{ printf "%s-%s" .Values.namePrefix  .Values.name }}
   compositionSelector:
     matchLabels:
       provider: aws
