--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds-aurora-replica.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds-aurora-replica.yaml
@@ -22,6 +22,9 @@ spec:
             spec:
               type: object
               properties:
+                id:
+                  type: string
+                  description: Database ID              
                 count:
                   type: integer
                   description: "The number of Aurora replicas to create."
