--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -35,6 +35,7 @@ k8s_crossplane_module_version: "0.11.4"
 crossplane_func_go_templating_version: "0.8.0"
 velero_helm_version: "7.2.1"
 velero_plugin_version: "v1.11.0"
+external_snapshotter_version: "v8.2.0"
 coredns_localcache_version: "1.11.3"
 
 istio_egress_gateway_max_replicas: 5
