--- a/gitops/applications/overlays/cloud_provider/aws/maintenance/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/maintenance/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - https://raw.githubusercontent.com/kubernetes-csi/external-snapshotter/refs/tags/${ARGOCD_ENV_ext_snap_ver}/client/config/crd/snapshot.storage.k8s.io_volumesnapshotclasses.yaml
   - https://raw.githubusercontent.com/kubernetes-csi/external-snapshotter/refs/tags/${ARGOCD_ENV_ext_snap_ver}/client/config/crd/snapshot.storage.k8s.io_volumesnapshotcontents.yaml
   - https://raw.githubusercontent.com/kubernetes-csi/external-snapshotter/refs/tags/${ARGOCD_ENV_ext_snap_ver}/client/config/crd/snapshot.storage.k8s.io_volumesnapshots.yaml
+  - volumesnapshotclass.yaml
 helmCharts:
   - name: velero
     releaseName: velero
