--- a/terraform/ccnew/default-config/cluster-config.yaml
+++ b/terraform/ccnew/default-config/cluster-config.yaml
@@ -15,6 +15,7 @@ kubernetes_oidc_enabled: true
 enable_object_storage_backend: true
 object_storage_base_bucket_name: velero
 object_storage_force_destroy_bucket: false #prod should set to false
+enable_object_storage_bucket_import: false
 bastion_instance_size: t3.small
 enable_cloud_csi_provisioner: true
 nodes:
