--- a/gitops/applications/base/gitlab/ruby-script-config-map.yaml
+++ b/gitops/applications/base/gitlab/ruby-script-config-map.yaml
@@ -10,7 +10,7 @@ data:
     if token.nil?
         token = user.personal_access_tokens.create(scopes: [:api], name: 'rootapitoken', expires_at: 30.days.from_now)
         token.set_token(ENV["TOKEN_VALUE"])
-    elsif token.revoked
+    elsif token.expire_notification_delivered
         token.delete
         token = user.personal_access_tokens.create(scopes: [:api], name: 'rootapitoken', expires_at: 30.days.from_now)
         token.set_token(ENV["TOKEN_VALUE"])
