--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
   # - ../../../base/consul.yaml
   # - ../../../base/percona-operator.yaml
   # - ../../../base/redis-operator.yaml
-  # - ../../../base/base-monitoring.yaml
+  - ../../../base/base-monitoring.yaml
   # # xplane database config
   # - ../../../base/xplane-provider-config.yaml
   # # vault
@@ -48,7 +48,7 @@ resources:
   # # deploy-env
   # - ../../../base/deploy-env.yaml
   # # monitoring
-  - ../../../base/monitoring-pre.yaml
+  # - ../../../base/monitoring-pre.yaml
   # - ../../../base/monitoring.yaml
   # - ../../../base/monitoring-post-config.yaml
   # # k8s
