--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -136,6 +136,7 @@ gitlab_postgres_storage_size: "10Gi"
 gitlab_rds_postgres_storage_size: "'100'"
 gitlab_postgres_instance_size: "small"
 gitlab_pgdb_helm_version: "2.4.0"
+gitlab_token_ttl_days: "'14'"
 gitlab_praefect_postgres_replicas: "'1'"
 gitlab_praefect_postgres_proxy_replicas: "'1'"
 gitlab_praefect_postgres_storage_size: "10Gi"
