--- a/gitops/applications/base/gitlab/ruby-script-config-map.yaml
+++ b/gitops/applications/base/gitlab/ruby-script-config-map.yaml
@@ -8,11 +8,11 @@ data:
     user = User.where(id: 1).first
     token = user.personal_access_tokens.where(name: 'rootapitoken').first
     if token.nil?
-        token = user.personal_access_tokens.create(scopes: [:api], name: 'rootapitoken', expires_at: 30.days.from_now)
+        token = user.personal_access_tokens.create(scopes: [:api], name: 'rootapitoken', expires_at: ${ARGOCD_ENV_gitlab_token_ttl}.days.from_now)
         token.set_token(ENV["TOKEN_VALUE"])
     elsif token.expires_at < Time.now
         token.delete
-        token = user.personal_access_tokens.create(scopes: [:api], name: 'rootapitoken', expires_at: 30.days.from_now)
+        token = user.personal_access_tokens.create(scopes: [:api], name: 'rootapitoken', expires_at: ${ARGOCD_ENV_gitlab_token_ttl}.days.from_now)
         token.set_token(ENV["TOKEN_VALUE"])
     end
     token.save!
