--- a/terraform/k8s/default-config/platform-stateful-resources.yaml
+++ b/terraform/k8s/default-config/platform-stateful-resources.yaml
@@ -319,7 +319,7 @@ keto-db:
     logical_service_name: keto-db
     db_username: keto
     user_password_secret: keto-db-secret
-    user_password_secret_key: password
+    user_password_secret_key: mysql-password
     secret_extra_namespaces:
       - ory
     database_name: keto
@@ -339,7 +339,7 @@ kratos-db:
     logical_service_name: kratos-db
     db_username: kratos
     user_password_secret: kratos-db-secret
-    user_password_secret_key: password
+    user_password_secret_key: mysql-password
     secret_extra_namespaces:
       - ory
     database_name: kratos
