--- a/terraform/ccnew/default-config/bare-metal-vars.yaml
+++ b/terraform/ccnew/default-config/bare-metal-vars.yaml
@@ -79,13 +79,6 @@ master_hosts:
 k6s_callback_fqdn: none
 enable_k6s_test_harness: false
 test_harness_private_ip: none
-route53_external_dns_access_key: "changeme"
-route53_external_dns_secret_key: "changeme"
-external_dns_credentials_client_id_name: "changeme"
-external_dns_credentials_client_secret_name: "changeme"
-cert_manager_credentials_client_secret_name: "changeme"
-cert_manager_credentials_client_id_name: "changeme"
-longhorn_backups_access_key: "changeme"
-longhorn_backups_secret_key: "changeme"
-longhorn_backups_bucket_name: dev1.devbaremetal.infitx-labs.com-lhbck
+ci_iam_user_client_secret_name: "replace"
+ci_iam_user_client_id_name: "replace"
 dns_resolver_ip: 10.10.100.1
