--- a/terraform/ccnew/default-config/bare-metal-vars.yaml
+++ b/terraform/ccnew/default-config/bare-metal-vars.yaml
@@ -9,7 +9,7 @@ backup_bucket_name: storage-bucket
 nat_public_ips: ["publicip"]
 internal_load_balancer_dns: 10.10.10.56
 egress_gateway_cidr: 10.10.100.0/24
-bastion_public_ip: publicip
+bastion_public_ips: ["publicip"]
 private_subdomain: ""
 public_subdomain: "dev1.devbaremetal.infitx-labs.com"
 int_interop_switch_subdomain: intapi
