--- a/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
@@ -1,14 +1,15 @@
 thirdparty-auth-svc-db:
   local_operator_config:
-    cr_version: 1.14.0
+    cr_version: 1.16.1
     percona_xtradb_mysql_version: 8.0.35-27.1
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    percona_xtradb_haproxy_version: 2.8.11
+    percona_xtradb_logcoll_version: 1.16.1-logcollector-fluentbit3.2.2
+    percona_xtradb_backup_version: 1.16.1-pxc8.0-backup-pxb8.0.35
     resource_namespace: thirdparty-db
     override_service_name: mysql-thirdparty-auth-svc-db
     resource_operator_crd_version: 1.15.0
     resource_operator_cr_ref: percona/mysql/db-cluster.yaml.tpl
+    haproxy_replica: 1
     secret_config:
       generate_secret_name: mysql-auth-svc-secret
       generate_secret_keys:
@@ -57,17 +58,18 @@ thirdparty-auth-svc-db:
       pxc_strict_mode: PERMISSIVE
 mysql-consent-oracle-db:
   local_operator_config:
-    cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    cr_version: 1.16.1
+    percona_xtradb_mysql_version: 8.0.39-30.1
+    percona_xtradb_haproxy_version: 2.8.11
+    percona_xtradb_logcoll_version: 1.16.1-logcollector-fluentbit3.2.2
+    percona_xtradb_backup_version: 1.16.1-pxc8.0-backup-pxb8.0.35
     resource_namespace: thirdparty-db
     override_service_name:
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
     resource_helm_chart: mysql
     resource_helm_chart_version: 9.7.0
     resource_helm_values_ref: values-mysql.yaml.tpl
+    haproxy_replica: 1    
     secret_config:
       generate_secret_name: mysql-consent-oracle-secret
       generate_secret_keys:
@@ -116,17 +118,18 @@ mysql-consent-oracle-db:
       pxc_strict_mode: PERMISSIVE
 mcm-db:
   local_operator_config:
-    cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    cr_version: 1.16.1
+    percona_xtradb_mysql_version: 8.0.39-30.1
+    percona_xtradb_haproxy_version: 2.8.11
+    percona_xtradb_logcoll_version: 1.16.1-logcollector-fluentbit3.2.2
+    percona_xtradb_backup_version: 1.16.1-pxc8.0-backup-pxb8.0.35
     resource_namespace: mcm-db
     override_service_name: mcm-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
     resource_helm_chart: mysql
     resource_helm_chart_version: 9.7.0
     resource_helm_values_ref: values-mysql.yaml.tpl
+    haproxy_replica: 1    
     secret_config:
       generate_secret_name: mcm-db-secret
       generate_secret_keys:
@@ -175,11 +178,11 @@ mcm-db:
       pxc_strict_mode: PERMISSIVE
 account-lookup-db:
   local_operator_config:
-    cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    cr_version: 1.16.1
+    percona_xtradb_mysql_version: 8.0.39-30.1
+    percona_xtradb_haproxy_version: 2.8.11
+    percona_xtradb_logcoll_version: 1.16.1-logcollector-fluentbit3.2.2
+    percona_xtradb_backup_version: 1.16.1-pxc8.0-backup-pxb8.0.35
     resource_namespace: mojaloop-db
     override_service_name: account-lookup-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -242,11 +245,11 @@ account-lookup-db:
       pxc_strict_mode: PERMISSIVE
 central-ledger-db:
   local_operator_config:
-    cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    cr_version: 1.16.1
+    percona_xtradb_mysql_version: 8.0.39-30.1
+    percona_xtradb_haproxy_version: 2.8.11
+    percona_xtradb_logcoll_version: 1.16.1-logcollector-fluentbit3.2.2
+    percona_xtradb_backup_version: 1.16.1-pxc8.0-backup-pxb8.0.35
     resource_namespace: mojaloop-db
     override_service_name: central-ledger-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -519,11 +522,11 @@ ttk-mongodb:
 
 keycloak-db:
   local_operator_config:
-    cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    cr_version: 1.16.1
+    percona_xtradb_mysql_version: 8.0.39-30.1
+    percona_xtradb_haproxy_version: 2.8.11
+    percona_xtradb_logcoll_version: 1.16.1-logcollector-fluentbit3.2.2
+    percona_xtradb_backup_version: 1.16.1-pxc8.0-backup-pxb8.0.35
     resource_namespace: keycloak-db
     override_service_name: keycloak-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -578,11 +581,11 @@ keycloak-db:
       pxc_strict_mode: PERMISSIVE
 keto-db:
   local_operator_config:
-    cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    cr_version: 1.16.1
+    percona_xtradb_mysql_version: 8.0.39-30.1
+    percona_xtradb_haproxy_version: 2.8.11
+    percona_xtradb_logcoll_version: 1.16.1-logcollector-fluentbit3.2.2
+    percona_xtradb_backup_version: 1.16.1-pxc8.0-backup-pxb8.0.35
     resource_namespace: keto-db
     override_service_name: keto-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -638,11 +641,11 @@ keto-db:
       pxc_strict_mode: PERMISSIVE
 kratos-db:
   local_operator_config:
-    cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    cr_version: 1.16.1
+    percona_xtradb_mysql_version: 8.0.39-30.1
+    percona_xtradb_haproxy_version: 2.8.11
+    percona_xtradb_logcoll_version: 1.16.1-logcollector-fluentbit3.2.2
+    percona_xtradb_backup_version: 1.16.1-pxc8.0-backup-pxb8.0.35
     resource_namespace: kratos-db
     override_service_name: kratos-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
