--- a/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
@@ -9,6 +9,7 @@ thirdparty-auth-svc-db:
     override_service_name: mysql-thirdparty-auth-svc-db
     resource_operator_crd_version: 1.15.0
     resource_operator_cr_ref: percona/mysql/db-cluster.yaml.tpl
+    haproxy_count: 1
     secret_config:
       generate_secret_name: mysql-auth-svc-secret
       generate_secret_keys:
@@ -68,6 +69,7 @@ mysql-consent-oracle-db:
     resource_helm_chart: mysql
     resource_helm_chart_version: 9.7.0
     resource_helm_values_ref: values-mysql.yaml.tpl
+    haproxy_count: 1    
     secret_config:
       generate_secret_name: mysql-consent-oracle-secret
       generate_secret_keys:
@@ -127,6 +129,7 @@ mcm-db:
     resource_helm_chart: mysql
     resource_helm_chart_version: 9.7.0
     resource_helm_values_ref: values-mysql.yaml.tpl
+    haproxy_count: 1    
     secret_config:
       generate_secret_name: mcm-db-secret
       generate_secret_keys:
@@ -186,6 +189,7 @@ account-lookup-db:
     resource_helm_chart: mysql
     resource_helm_chart_version: 9.7.0
     resource_helm_values_ref: values-mysql.yaml.tpl
+    haproxy_count: 1    
     secret_config:
       generate_secret_name: account-lookup-db-secret
       generate_secret_keys:
@@ -253,6 +257,7 @@ central-ledger-db:
     resource_helm_chart: mysql
     resource_helm_chart_version: 9.7.0
     resource_helm_values_ref: values-mysql.yaml.tpl
+    haproxy_count: 1    
     secret_config:
       generate_secret_name: central-ledger-db-secret
       generate_secret_keys:
@@ -530,6 +535,7 @@ keycloak-db:
     resource_helm_chart: mysql
     resource_helm_chart_version: 9.7.0
     resource_helm_values_ref: values-mysql.yaml.tpl
+    haproxy_count: 1    
     secret_config:
       generate_secret_name: keycloak-db-secret
       generate_secret_keys:
@@ -589,6 +595,7 @@ keto-db:
     resource_helm_chart: mysql
     resource_helm_chart_version: 9.7.0
     resource_helm_values_ref: values-mysql.yaml.tpl
+    haproxy_count: 1    
     secret_config:
       generate_secret_name: keto-db-secret
       generate_secret_keys:
@@ -649,6 +656,7 @@ kratos-db:
     resource_helm_chart: mysql
     resource_helm_chart_version: 9.7.0
     resource_helm_values_ref: values-mysql.yaml.tpl
+    haproxy_count: 1    
     secret_config:
       generate_secret_name: kratos-db-secret
       generate_secret_keys:
