secrets generator app test

--- a/gitops/argo-apps/base/kubernetes-secret-generator.yaml
+++ b/gitops/argo-apps/base/kubernetes-secret-generator.yaml
@@ -29,10 +29,11 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: ${ARGOCD_ENV_utils_kubernetes_secret_generator_namespace}
   sources:
-    - chart: kubernetes-secret-generator
-      repoURL: https://helm.mittwald.de
-      targetRevision: ${ARGOCD_ENV_utils_kubernetes_secret_generator_helm_version}
-      helm:
-        valuesObject:
-          crds:
-            enabled: true
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      targetRevision: ${ARGOCD_ENV_utils_application_gitrepo_tag}
+      path: gitops/applications/base/secrets-generator
+      plugin:
+        name: envsubst
+        env:
+          - name: secrets_generator_namespace
+            value: "${ARGOCD_ENV_utils_kubernetes_secret_generator_namespace}"
