--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -134,6 +134,24 @@ loki_query_frontend_replica_count: "'1'"
 loki_query_scheduler_replica_count: "'1'"
 loki_compactor_replica_count: "'1'"
 
+loki_distributor_requests_cpu: "500m"
+loki_distributor_requests_memory: "256Mi"
+loki_distributor_limits_cpu: "750m"
+loki_distributor_limits_memory: "1Gi"
+loki_ingester_requests_cpu: "1000m"
+loki_ingester_requests_memory: "6Gi"
+loki_ingester_limits_cpu: "4000m"
+loki_ingester_limits_memory: "12Gi"
+loki_querier_limits_cpu: "1000m"
+loki_querier_limits_memory: "4Gi"
+loki_query_frontend_limits_cpu: "200m"
+loki_query_frontend_limits_memory: "512Mi"
+loki_query_scheduler_limits_cpu: "200m"
+loki_query_scheduler_limits_memory: "1Gi"
+loki_compactor_limits_cpu: "1500m"
+loki_compactor_limits_memory: "3Gi"
+
+
 
 gitlab_helm_version: "8.1.2"
 gitlab_public_access: true
