--- a/gitops/applications/base/monitoring/values-loki.yaml
+++ b/gitops/applications/base/monitoring/values-loki.yaml
@@ -61,6 +61,14 @@ compactor:
   updateStrategy:
     type: Recreate  
 distributor:
+  replicaCount: ${ARGOCD_ENV_loki_distributor_replica_count}
+  resources:
+    requests:
+      cpu: ${ARGOCD_ENV_loki_distributor_requests_cpu}
+      memory: ${ARGOCD_ENV_loki_distributor_requests_memory}
+    limits:
+      cpu: ${ARGOCD_ENV_loki_distributor_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_distributor_limits_memory}
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
