--- a/gitops/applications/base/monitoring/values-loki.yaml
+++ b/gitops/applications/base/monitoring/values-loki.yaml
@@ -81,10 +81,20 @@ distributor:
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
 querier:
+  replicaCount: ${ARGOCD_ENV_loki_querier_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_loki_querier_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_querier_limits_memory}
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
 queryFrontend:
+  replicaCount: ${ARGOCD_ENV_loki_query_frontend_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_loki_query_frontend_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_query_frontend_limits_memory}
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
