--- a/gitops/applications/base/monitoring/values-loki.yaml
+++ b/gitops/applications/base/monitoring/values-loki.yaml
@@ -63,6 +63,11 @@ ingester:
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
 compactor:
+  replicaCount: ${ARGOCD_ENV_loki_compactor_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_loki_querier_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_querier_limits_memory}
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
@@ -99,6 +104,11 @@ queryFrontend:
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
 queryScheduler:
+  replicaCount: ${ARGOCD_ENV_loki_query_scheduler_replica_count}
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_loki_query_scheduler_limits_cpu}
+      memory: ${ARGOCD_ENV_loki_query_scheduler_limits_memory}
   enabled: true
   extraArgs: ["-config.expand-env"]
   extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
