--- a/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
+++ b/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
@@ -65,6 +65,7 @@ cache:
     - git config --global credential.helper 'store --file ~/.gitcredentials.store'
     - git submodule sync --recursive
     - git submodule update --init --recursive
+    - if [ $MIGRATE == "true" ]; then .gitlab/scripts/get-artifacts.sh; fi
     - source $(which gitlab-terraform)
     - .gitlab/scripts/config-merge.sh
     - yq eval '.' $CONFIG_PATH/cluster-config.yaml -o=json > cluster-config.json
